fixed quiz page

--- a/templates/admin/add.html
+++ b/templates/admin/add.html
@@ -5,10 +5,10 @@
             {% from "admin/includes/_formhelpers.html" import render_field %}
             <form action="" method ="POST">
                 <div class="form-group">
-                    {{render_field(form.question, class="form-control")}}
+                    {{render_field(form.number, class="form-control")}}
                 </div>
                 <div class="form-group">
-                    {{render_field(form.category, class="form-control")}}
+                    {{render_field(form.question, class="form-control")}}
                 </div>
                 <div class="form-group">
                     {{render_field(form.option_a, class="form-control")}}
