--- a/templates/welcome.html
+++ b/templates/welcome.html
@@ -5,7 +5,7 @@
     <h5 class="card-title">Welcome <span>{{session.username}}</span></h5>
     <p class="card-text">Thank you for your interest in taking the quiz.The quiz consist of Just 10 questions and you have 10 minutes to answer them. Best of luck</p>
     
-    <a href="#" class="btn btn-primary">START</a>
+    <a href="/quiz" class="btn btn-primary">START</a>
   </div>
 </div>
 {%endblock%}
