--- a/templates/includes/_header.html
+++ b/templates/includes/_header.html
@@ -29,7 +29,7 @@
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     {% if session.logged_user %}
-      <a class="navbar-brand" href="/">Quiz</a>
+      <a class="navbar-brand" href="/welcome">Home</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
